Completed Part 4 and Graduate Follow-Up

--- a/homework/hw3b-solution.ipynb
+++ b/homework/hw3b-solution.ipynb
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "id": "60",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "id": "63",
    "metadata": {},
    "outputs": [
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "id": "66",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 16,
    "id": "69",
    "metadata": {},
    "outputs": [
@@ -1529,15 +1529,48 @@
    "execution_count": 17,
    "id": "81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The busiest hour of the day was 17 with 10574 trips.\n",
+      "\n",
+      "The busiest day of the week was Wednesday with 16513 trips.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "started_at\n",
+       "Monday       11531\n",
+       "Tuesday      14970\n",
+       "Wednesday    16513\n",
+       "Thursday     16080\n",
+       "Friday       13691\n",
+       "Saturday     14427\n",
+       "Sunday       12788\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Determine the most popular hour for trips and report\n",
-    "\n",
+    "hour_counts = rides.index.hour.value_counts()\n",
+    "print(f\"The busiest hour of the day was {hour_counts.index[0]} with {hour_counts.iloc[0]} trips.\\n\")\n",
     "\n",
     "# Determine busiest day of the week and report\n",
+    "day_counts = rides.index.day_name().value_counts()\n",
+    "print(f\"The busiest day of the week was {day_counts.index[0]} with {day_counts.iloc[0]} trips.\\n\")\n",
     "\n",
-    "\n",
-    "# Sort results by day of the week\n"
+    "# Sort results by day of the week\n",
+    "day_order = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+    "day_counts.reindex(day_order)"
    ]
   },
   {
@@ -1575,16 +1608,55 @@
    "execution_count": 18,
    "id": "85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average trip duration by rider type:\n",
+      "member_casual\n",
+      "casual    23.978046\n",
+      "member    11.984493\n",
+      "Name: trip_duration_min, dtype: float64\n",
+      "\n",
+      "Average trip duration by bike type:\n",
+      "rideable_type\n",
+      "classic_bike     20.337410\n",
+      "electric_bike    12.033618\n",
+      "Name: trip_duration_min, dtype: float64\n",
+      "\n",
+      "Number of trips by rider type (.groupby()):\n",
+      "member_casual\n",
+      "casual    34686\n",
+      "member    65314\n",
+      "dtype: int64\n",
+      "\n",
+      "Number of trips by rider type (.value_counts()):\n",
+      "member_casual\n",
+      "member    65314\n",
+      "casual    34686\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate average trip duration by rider type\n",
-    "\n",
+    "print(f\"Average trip duration by rider type:\\n{rides.groupby('member_casual', observed=False)['trip_duration_min'].mean()}\\n\")\n",
     "\n",
     "# Caclulate average trip duration by bike type\n",
-    "\n",
+    "print(f\"Average trip duration by bike type:\\n{rides.groupby('rideable_type', observed=False)['trip_duration_min'].mean()}\\n\")\n",
     "\n",
     "# Calculate number trips by rider type\n",
-    "\n"
+    "print(f\"Number of trips by rider type (.groupby()):\\n{rides.groupby('member_casual', observed=False).size()}\\n\")\n",
+    "print(f\"Number of trips by rider type (.value_counts()):\\n{rides['member_casual'].value_counts()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6249e3f-9ce8-423d-b782-6e8174b99ce3",
+   "metadata": {},
+   "source": [
+    "- Yes, they give the same result. In this scenario, I find `value_counts()` more readable and easier to use."
    ]
   },
   {
@@ -1626,7 +1698,15 @@
    "execution_count": 19,
    "id": "89",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of weekend electric bike trips before sampling: 11835\n"
+     ]
+    }
+   ],
    "source": [
     "# do not modify this setup code\n",
     "from pathlib import Path\n",
@@ -1635,8 +1715,18 @@
     "output_dir.mkdir(exist_ok=True)\n",
     "output_file = output_dir / 'weekend_electric_trips.csv'\n",
     "\n",
-    "# Task 4c code here...\n",
-    "# use the variable `output_file` as the filename for step 4\n"
+    "# Filter for weekend trips on electric bikes\n",
+    "#weekend_trips = rides[(rides['is_weekend']) & (rides['rideable_type'] == 'electric_bike')].iloc[0:1000]\n",
+    "(rides\n",
+    "    .query(\"is_weekend and rideable_type == 'electric_bike'\")\n",
+    "    .iloc[0:1000] # Select first 1k trips from filtered set\n",
+    "    .reset_index() # Convert start time back to column\n",
+    "    .to_csv(output_file, columns=['started_at', 'ended_at', 'member_casual', 'trip_duration_min', 'time_of_day'], index=False) # Export to csv with specified columns without default index\n",
+    ")\n",
+    "\n",
+    "# Calculate count of weekend trips before sampling\n",
+    "matches_before_sample = rides.query(\"is_weekend and rideable_type == 'electric_bike'\")\n",
+    "print(f\"Number of weekend electric bike trips before sampling: {len(matches_before_sample)}\")"
    ]
   },
   {
@@ -1672,7 +1762,9 @@
    "id": "93",
    "metadata": {},
    "source": [
-    "*Problem 4 interpretation here*"
+    "1. `groupby()` allows you to select a specific subset of your data and perform operations on it. Split creates the groups based on the key provided to the method. Apply executes the method on each group individually. Combine takes the results of the Apply method, puts them together, and creates a new DataFrame with them.\n",
+    "2. `value_counts()` should be used when you need to count the unique values in a single column, and it is more readable. `groupby().size()` should be used when you want to chain more methods at the same time (like calculating the mean earlier), or if you need to count based on more than one column. Only `groupby().size()` will work for more than one column.\n",
+    "3. We wanted to make sure the data got exported, as it is useful data. If we didn't reset the index and used `index=False` the datetime information would be lost in the exported file."
    ]
   },
   {
@@ -1715,10 +1807,10 @@
       "\n",
       "Load time comparison:\n",
       "CSV:\n",
-      "549 μs ± 14.1 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "564 μs ± 13.9 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "\n",
       "Pickle:\n",
-      "95.2 μs ± 3.4 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "98.2 μs ± 897 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
       "\n",
       "Data types from CSV (without parse_dates):\n",
       "started_at             object\n",
@@ -1825,7 +1917,9 @@
    "id": "98",
    "metadata": {},
    "source": [
-    "*Graduate follow-up interpretation here*"
+    "1. It prevents long chains of methods from stretching off the screen, making it more readable. During debugging, the error message will point to the line that caused the error, so this makes it easy to know what is causing the issue, since there is only one method per line. You can also easily comment out each method during debugging. git diff is based on the lines that were changed, so if you didn't format the chain this way and you added a method, the entire line would appear like a delete and addition. With this changing format, it makes it easy to see exactly what changed, since it would only show the one line (one method) that was added. If you have a ton of methods in a chain, it can begin to be hard to follow the logic and understand what is happening.\n",
+    "2. The pickle file preserved the datetime and category types, which were lost in the CSV. If you load from a pickle, you can immediately resume your analysis without having to convert to the datetime and category types. Having the category type already there also preserves the memory optimization discussed earlier.\n",
+    "3. I would choose pickle when I want to resume my analysis later, preserve my current state, or I'm purely using Python and want to keep the memory efficiency and speed. I would choose CSV when I need to share the data across platforms. CSV is compatible everywhere. I would also use CSV is I needed to actually manually read the file, since pickle is binary. I would also want to archive the data as CSV instead of pickle."
    ]
   },
   {
@@ -1865,8 +1959,28 @@
    "id": "101",
    "metadata": {},
    "source": [
-    "*Reflection here*"
+    "1. NumPy vs. Pandas:\n",
+    "   - The biggest conceptual shift I'd say is using heterogenous data instead of homogenous data. It also is a move from positional to labeled data.\n",
+    "   - Indexing was by far the most challenging for me. I was very confused by the indexing when using standard brackets. I couldn't keep straight what would be returned depending on what I passed it. Using `iloc` and `loc` starting making sense once I learned how to use them. I worked through it by applying what I was trying to retrieve by using brackets to `iloc` and `loc` to get what I needed.\n",
+    "2. Real Data Experience:\n",
+    "   - The data from hw2b was much more clean and ready to perform analysis on. It was also homogenous numeric data. The data in this assignment was more representative of real data and messy. We had to convert some types into more useful types to perform the analysis. There was also lots of missing data that you have to think about what to do with.\n",
+    "   - Pandas is created to use for the entire analysis process, not just the mathemematical operations. It can be used to read and write the data, manipulate it (conversions, groupby), and perform calculations on it. Being able to handle more realistic heterogenous data is also a big plus that NumPy doesn't have. These things along with the built in methods to handle missing data make Pandas a great tool for data analysis.\n",
+    "3. Learning & Application:\n",
+    "   - Data manipulation using conversions (datetime, category) and using `groupby()` to perform operations on specific items. Being able to use convert columns to datetime to calculate durations is extremely useful.\n",
+    "   - 8 - I feel confident I am ready to use Pandas for my own projects, but I still have to reference syntax and little things pretty often. Working with it more on my own data will increase that score.\n",
+    "4. Feedback:\n",
+    "   - ~8 hours\n",
+    "   - The most helpful part for me was learning `iloc` and `loc`. The bracket indexing was confusing, so when these two alternative methods were taught, it made things much easier and make more sense.\n",
+    "   - I would recommend stating up front before beginning the assignment that the dataset is in your class repository. I spent a few minutes browsing the dataset's website trying to find the file."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40890cc3-c84b-4247-8924-44358d3889d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
