Updated hw3b solution with new code for graduate follow up and additional question. Also uploaded updated output files.

--- a/homework/hw3b-solution.ipynb
+++ b/homework/hw3b-solution.ipynb
@@ -1791,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "96",
    "metadata": {},
    "outputs": [
@@ -1799,18 +1799,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 310 long rush-hour trips from lakefront stations\n",
+      "Found 498 long rush-hour trips from lakefront stations\n",
       "\n",
-      "CSV file size: 40.27 KB\n",
-      "Pickle file size: 21.18 KB\n",
-      "Size difference: 19.09 KB\n",
+      "CSV file size: 69.64 KB\n",
+      "Pickle file size: 22.18 KB\n",
+      "Size difference: 47.45 KB\n",
       "\n",
       "Load time comparison:\n",
       "CSV:\n",
-      "564 μs ± 13.9 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "773 μs ± 32.9 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "\n",
       "Pickle:\n",
-      "98.2 μs ± 897 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "94.6 μs ± 1.85 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
       "\n",
       "Data types from CSV (without parse_dates):\n",
       "started_at             object\n",
@@ -1847,16 +1847,17 @@
     "# Filter for interesting pattern: Long trips (>15 min) during rush hours \n",
     "# from lakefront stations, sorted by duration\n",
     "lakefront_rush = (rides\n",
-    "    .loc[(rides.index.hour.isin([7, 8, 9, 16, 17, 18]))]\n",
-    "    .loc[(rides['start_station_name'].str.contains('Lake Shore|Lakefront', \n",
-    "                                                    case=False, \n",
-    "                                                    na=False))]\n",
-    "    .loc[rides['trip_duration_min'] > 15]\n",
-    "    .sort_values('trip_duration_min', ascending=False)\n",
-    "    .head(1000)\n",
-    "    .reset_index()\n",
-    "    [['started_at', 'ended_at', 'start_station_name', 'end_station_name',\n",
-    "      'member_casual', 'rideable_type', 'trip_duration_min']]\n",
+    "\n",
+    " .loc[(rides.index.hour.isin([7, 8, 9, 16, 17, 18])) &\n",
+    "      (rides['start_station_name'].str.contains('Lake Shore|Lakefront',\n",
+    "       case=False,\n",
+    "       na=False)) &\n",
+    "      (rides['trip_duration_min'] > 15)]\n",
+    "      .sort_values('trip_duration_min', ascending=False)\n",
+    "      .head(1000)\n",
+    "      .reset_index()\n",
+    "      [['started_at', 'ended_at', 'start_station_name', 'end_station_name',\n",
+    "        'member_casual', 'rideable_type', 'trip_duration_min']]\n",
     ")\n",
     "\n",
     "print(f\"Found {len(lakefront_rush)} long rush-hour trips from lakefront stations\")\n",
@@ -1909,7 +1910,8 @@
     "\n",
     "   This wraps the entire chain in parentheses, allowing each method to appear on its own line without backslashes. Discuss why this makes formatting more readable, how it makes debugging easier, how it relates to seeing changes in the code with git diff, and what downsides heavy chaining might have.\n",
     "3. Data types: Compare the dtypes from CSV versus pickle. What types were preserved by pickle that were lost in CSV? Why is this preservation significant for subsequent analysis?\n",
-    "4. Trade-offs: Given your observations about size, speed, and type preservation, when would you choose pickle over CSV for your work? When would CSV still be the better choice despite pickle's advantages?\n"
+    "4. Trade-offs: Given your observations about size, speed, and type preservation, when would you choose pickle over CSV for your work? When would CSV still be the better choice despite pickle's advantages?\n",
+    "5. ADDED LATER: What did I change from the original code with this fix? In your opinion, why didn't the original code work and why does this one work as intended?"
    ]
   },
   {
@@ -1919,7 +1921,8 @@
    "source": [
     "1. It prevents long chains of methods from stretching off the screen, making it more readable. During debugging, the error message will point to the line that caused the error, so this makes it easy to know what is causing the issue, since there is only one method per line. You can also easily comment out each method during debugging. git diff is based on the lines that were changed, so if you didn't format the chain this way and you added a method, the entire line would appear like a delete and addition. With this changing format, it makes it easy to see exactly what changed, since it would only show the one line (one method) that was added. If you have a ton of methods in a chain, it can begin to be hard to follow the logic and understand what is happening.\n",
     "2. The pickle file preserved the datetime and category types, which were lost in the CSV. If you load from a pickle, you can immediately resume your analysis without having to convert to the datetime and category types. Having the category type already there also preserves the memory optimization discussed earlier.\n",
-    "3. I would choose pickle when I want to resume my analysis later, preserve my current state, or I'm purely using Python and want to keep the memory efficiency and speed. I would choose CSV when I need to share the data across platforms. CSV is compatible everywhere. I would also use CSV is I needed to actually manually read the file, since pickle is binary. I would also want to archive the data as CSV instead of pickle."
+    "3. I would choose pickle when I want to resume my analysis later, preserve my current state, or I'm purely using Python and want to keep the memory efficiency and speed. I would choose CSV when I need to share the data across platforms. CSV is compatible everywhere. I would also use CSV is I needed to actually manually read the file, since pickle is binary. I would also want to archive the data as CSV instead of pickle.\n",
+    "4. My code did not fail with the orginal version, but I updated the code and ran it again anyway (see gitgub history). What was changed was instead of chaining together `.loc` methods, you use three conditional `&`s to evaluate before creating the boolean mask. This does the conditional evaluations on `rides`. The `.loc` chaining method makes the next `.iloc` methods operate on the newly created dataframe from the previous step. I'm not sure what error was being caused, since I did not experience it. Google searching says that it could be an indexing error, but that it should work due to Pandas automatic index alignment. The index error would be due to the `loc[(rides['start_station_name']` being called on the new dataframe which contains less rows than `rides`. I can confirm this with the new csv and pickle files now containing 498 rows vs the original 310."
    ]
   },
   {
